--- a/new.css
+++ b/new.css
@@ -67,9 +67,9 @@ table {
     -moz-border-right-colors: none;
     -moz-border-top-colors: none;
     border-collapse: collapse;
-    border-color: -moz-use-text-color #9b9b9b #9b9b9b -moz-use-text-color;
+    border-color: -moz-use-text-color #565a6a #565a6a -moz-use-text-color;
     border-image: none;
-    border-right: 1px solid #9b9b9b;
+    border-right: 1px solid #565a6a;
     border-style: hidden solid solid hidden;
     border-width: medium 1px 1px medium;
     width: 100%;
@@ -138,7 +138,7 @@ tr a:hover {
 	z-index: 999;}
 #header .sub span{
 	background:url("https://i.imgur.com/X0e9JD9.png") repeat-x scroll 0 50% transparent;
-	border: 1px solid #9b9b9b;
+	border: 1px solid #565a6a;
 	display:block;
 	padding:5px;}
 #header .sub a{
@@ -1112,7 +1112,7 @@ table.forum_index {											/* Sets background of main forum page */
 #forums td.body {text-align:left;}
 
 #forums td {
-	border: 1px solid #9b9b9b !important;
+	border: 1px solid #565a6a !important;
 	text-align:center;}
 
 #forums h3{margin:15px 0}
@@ -1287,10 +1287,10 @@ table td.avatar {
 #forums #content .search #otherop {
 	margin-bottom: -3px;}
 #forums #content .search table {
-	border: 2px solid #9b9b9b;
+	border: 2px solid #565a6a;
 	margin-bottom: 6px;}
 #forums #content .search table td {
-	border:solid #9b9b9b 1px;}
+	border:solid #565a6a 1px;}
 #forums #content .search table tr {
 	background-color:#426d93;}
 #forums #content .search table tr td.label {
@@ -1309,7 +1309,7 @@ table td.avatar {
 	width:10%;}
 #forums #content .sub span{
 	background:url("https://i.imgur.com/X0e9JD9.png") repeat-x scroll 0 50% transparent;
-	border: 1px solid #9b9b9b;
+	border: 1px solid #565a6a;
 	display:block;
 	padding:5px;}
 #forums #content .sub a{
@@ -1391,7 +1391,7 @@ tr.participated >td:nth-child(2):before {
 
 #userhistory #content table td {
 	background-color:#46444dcc;
-	border: #9b9b9b solid 1px;}
+	border: #565a6a solid 1px;}
 
 #userhistory #content table td.avatar {
 	background-color:#46444dcc;}
@@ -1521,7 +1521,7 @@ tbody .r10, tbody .r20, tbody .r50, tbody .r99 {color:#bcd68c;}
         padding: 5px 0px 2px 3px;
         overflow-y: auto;
         overflow-x: hidden;
-        border-top: 1px solid #9b9b9b;
+        border-top: 1px solid #565a6a;
         opacity: 0.6;}
 #torrents .forum_post .comment_rating .flleft {
         width: 30px;
@@ -1693,7 +1693,7 @@ tbody .r10, tbody .r20, tbody .r50, tbody .r99 {color:#bcd68c;}
 
 .sub span{
 	background:url("https://i.imgur.com/X0e9JD9.png") repeat-x scroll 0 50% transparent;
-	border: 1px solid #9b9b9b;
+	border: 1px solid #565a6a;
 	display:block;
 	padding:5px;}
 
@@ -2746,7 +2746,7 @@ ul.collage_images img {
 #rules #content .thin a strong {border:hidden;}
 
 #rules #wrapper #content .thin .box {
-	background-color:rgba(24, 59, 88, .55);
+	background-color:#46444dcc;
 	margin:0 20px;
 	border:solid #565a6a 1px;}
 
@@ -3081,7 +3081,7 @@ td .log_ {color: #}
 
 #requests #content .center table {
 	background: url('https://i.imgur.com/wPvACxL.png');
-	border: 1px solid #9b9b9b;
+	border: 1px solid #565a6a;
 	margin-bottom: 6px;}
 #requests #content .center table td {border:none;}
 #requests #content .center table tr {background-color:rgba(24,59,88,0.85);}
@@ -3136,13 +3136,13 @@ td .log_ {color: #}
 /* ************************** */
 
 #top10 #content .thin .center {margin:0 auto; margin-bottom:30px;}
-#top10 #content .thin .center table {background: url('https://i.imgur.com/wPvACxL.png'); border: 1px #9b9b9b solid;}
+#top10 #content .thin .center table {background: url('https://i.imgur.com/wPvACxL.png'); border: 1px #565a6a solid;}
 #top10 #content .thin .center table tr td {background-color:rgba(47, 48, 54, .75); border: none;}
 #top10 #content .thin .center table tr td.label {background-color:rgba(47, 48, 54, .75); border: none;}
 
 #top10 #content .group_torrent td.center {width:28px;}
 
-#top10 #content table.border {background: url('https://i.imgur.com/iKifocg.png') center center; border: 1px #9b9b9b solid;}
+#top10 #content table.border {background: url('https://i.imgur.com/iKifocg.png') center center; border: 1px #565a6a solid;}
 #top10 #content .thin tr.rowa {background-color: transparent;}
 #top10 #content .thin tr.rowb {background-color: transparent;}
 
@@ -3197,7 +3197,7 @@ td .log_ {color: #}
 #blog .box {
 	background-color:#3b3f49;
 	color: #fff;
-	border: 1px solid #9b9b9b;}
+	border: 1px solid #565a6a;}
 #blog .box a {
 	color:fff;}
 
@@ -3276,13 +3276,13 @@ ul.thin li { margin:0px 0px; padding:0px; }
 	margin-bottom:8px;
 	margin-top:5px;}
 
-#inbox .box {background-color:#3b3f49; color:#fff; border: 1px #9b9b9b solid;}
+#inbox .box {background-color:#3b3f49; color:#fff; border: 1px #565a6a solid;}
 #inbox .box a {color:#fff; font-weight:bold;}
 
 #inbox #searchbox {
 	padding:2px;
 	background-color:#426d93;
-	border:solid 1px #9b9b9b;
+	border:solid 1px #565a6a;
 	margin-bottom:9px;
 	padding-left: 9px;}
 
@@ -3296,7 +3296,7 @@ ul.thin li { margin:0px 0px; padding:0px; }
 #inbox .head a {color:#fff;	font-weight:bold;}
 #inbox .head a.username {color:#fff; font-weight:bold;}
 
-#inbox table.comp {width: 100%;	border: 1px solid #9b9b9b;}
+#inbox table.comp {width: 100%;	border: 1px solid #565a6a;}
 
 #inbox .comp h3 {margin: auto 0;}
 #inbox .comp tr {background: none;}
@@ -3337,7 +3337,7 @@ tr.unreadpm {color:#8ed538;	background-color:#1c3248;}
 /* ************************* */
 
 #artist #content table {background: url('https://i.imgur.com/wPvACxL.png');}
-#artist #content table tr {background-color:rgba(24,59,88,0.85); border-bottom: 1px #9b9b9b solid;}
+#artist #content table tr {background-color:rgba(24,59,88,0.85); border-bottom: 1px #565a6a solid;}
 
 #artist #content .box table td {background-color:transparent; border: none;}
 
